--- a/index.html
+++ b/index.html
@@ -3,22 +3,34 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Name – Portfolio</title>
+  <title>Rizky Febri Ibra Habibie – Portfolio</title>
+  <meta name="description" content="Data Analysis & Data Science projects by Rizky Febri Ibra Habibie (Power BI, Forecasting, EDA)." />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    :root { --bg:#0f172a; --card:#111827; --text:#e5e7eb; --muted:#9ca3af; --accent:#60a5fa; }
-    *{box-sizing:border-box} body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto; background:var(--bg); color:var(--text);}
-    header{max-width:920px;margin:48px auto 16px;padding:0 20px}
-    h1{font-size:40px;margin:0 0 8px} p{margin:0 0 24px;color:var(--muted)}
-    .grid{max-width:920px;margin:0 auto;padding:0 20px;display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(260px,1fr))}
-    .card{background:var(--card);border:1px solid #1f2937;border-radius:16px;padding:18px;transition:transform .15s ease, border .15s}
-    .card:hover{transform:translateY(-3px);border-color:var(--accent)}
-    .title{font-weight:600;margin:0 0 6px}
-    .tag{display:inline-block;font-size:12px;color:#cbd5e1;border:1px solid #334155;border-radius:999px;padding:2px 8px;margin-right:6px}
+    :root { --bg:#0f172a; --card:#111827; --muted:#94a3b8; --text:#e5e7eb; --accent:#60a5fa; --border:#1f2937; }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Arial;background:var(--bg);color:var(--text)}
+    header,footer,.wrap{max-width:980px;margin:0 auto;padding:0 20px}
+    header{padding:48px 20px 12px}
+    h1{font-size:40px;line-height:1.1;margin:8px 0 10px}
+    p{margin:0 0 18px}
+    nav{display:flex;gap:14px;flex-wrap:wrap}
+    nav a{color:var(--muted);text-decoration:none}
+    nav a:hover{color:var(--text)}
+    .tag{display:inline-block;font-size:12px;color:#cbd5e1;border:1px solid #334155;border-radius:999px;padding:2px 8px;margin:0 6px 6px 0}
+    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(270px,1fr));padding:10px 20px 30px}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:18px;transition:transform .18s ease,border .18s ease}
+    .card:hover{transform:translateY(-4px);border-color:var(--accent)}
+    .title{font-weight:700;font-size:18px;margin:0 0 6px}
+    .muted{color:var(--muted)}
     a{color:var(--accent);text-decoration:none}
-    footer{max-width:920px;margin:32px auto 48px;padding:0 20px;color:var(--muted);font-size:14px}
-    nav a{margin-right:14px}
+    footer{padding:28px 20px 48px;color:var(--muted);font-size:14px}
+    .section-title{font-weight:800;font-size:22px;margin:26px 20px 8px}
+    .kicker{font-weight:600;letter-spacing:.04em;color:#a5b4fc;font-size:12px;text-transform:uppercase}
+    .row{display:flex;gap:12px;flex-wrap:wrap}
+    .cta{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--border);padding:8px 12px;border-radius:12px}
+    .cta:hover{border-color:var(--accent)}
   </style>
 </head>
 <body>
@@ -26,44 +38,70 @@
     <nav>
       <a href="#projects">Projects</a>
       <a href="#about">About</a>
-      <a href="mailto:you@email.com">Contact</a>
-      <a href="https://github.com/your-username" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/in/your-handle" target="_blank">LinkedIn</a>
+      <a href="mailto:rizkyfebriibrahabibie@gmail.com">Contact</a>
+      <a href="https://github.com/rfih" target="_blank" rel="noopener">GitHub</a>
+      <a href="https://www.linkedin.com/in/rizkyfebriibrahabibie/" target="_blank" rel="noopener">LinkedIn</a>
     </nav>
-    <h1>Your Name</h1>
-    <p>Product Manager • Data Analyst • Manufacturing Systems — I build practical tools that ship.</p>
+    <h1>Rizky Febri Ibra Habibie</h1>
+    <p class="muted">Data Analyst • Data Scientist-in-Progress — I build practical, business-ready analytics and forecasting tools. TOEIC 870. Based in Taiwan.</p>
+    <div class="row">
+      <a class="cta" href="https://rfih.github.io/Portfolio/" target="_blank" rel="noopener">Live Portfolio</a>
+      <a class="cta" href="#projects">Jump to Projects</a>
+    </div>
   </header>
 
-  <section id="projects" class="grid">
+  <h2 id="projects" class="section-title">Featured Projects</h2>
+  <section class="grid">
+    <!-- DATA ANALYSIS 1 -->
     <article class="card">
-      <h3 class="title">Door Frame Calculator</h3>
-      <p class="tag">Python</p><p class="tag">Tkinter</p>
-      <p>Desktop app to compute bill-of-materials for door frames with multilingual UI.</p>
-      <p><a href="https://github.com/your-username/door-frame-calculator">Code</a> · <a href="#">Demo</a></p>
+      <div class="kicker">Data Analysis · Power BI</div>
+      <h3 class="title">Global IC Trade Dashboard</h3>
+      <div>
+        <span class="tag">Power BI</span><span class="tag">UN Comtrade</span><span class="tag">EDA</span>
+      </div>
+      <p>Interactive dashboard analyzing worldwide Integrated Circuits (IC) export patterns (2020–2024): top countries, volumes vs. value, and exporter/importer distribution. 2022 peaks ~USD 2.15T; exporters &gt;45% of countries, showing supply concentration.</p>
+      <p><a href="https://github.com/rfih/Dibimbing---DSDA/tree/e7944923e68a7f86ffdcc906675cbc01d86c4d8e/Final%20Project%20Data%20Analysis" target="_blank" rel="noopener">Repo / Files</a></p>
     </article>
+
+    <!-- DATA ANALYSIS 2 -->
     <article class="card">
-      <h3 class="title">MES Lite (Flask)</h3>
-      <p class="tag">Flask</p><p class="tag">SQLite</p>
-      <p>Internal web app to track station progress, work orders, and daily output.</p>
-      <p><a href="https://github.com/your-username/mes-lite">Code</a> · <a href="#">Live</a></p>
+      <div class="kicker">Data Analysis · Slides</div>
+      <h3 class="title">Global IC Trade – Exploratory Insights</h3>
+      <div>
+        <span class="tag">EDA</span><span class="tag">Storytelling</span><span class="tag">Comtrade</span>
+      </div>
+      <p>Explains why top <em>exporters</em> aren’t always top <em>producers</em>: Hong Kong/Singapore as re‑export hubs; Russia/Belarus high volume but low value; opportunities for Indonesia to move into higher‑value IC segments.</p>
+      <p><a href="https://github.com/rfih/Dibimbing---DSDA/tree/e7944923e68a7f86ffdcc906675cbc01d86c4d8e/Final%20Project%20Data%20Analysis" target="_blank" rel="noopener">Repo / Slides</a></p>
     </article>
+
+    <!-- DATA SCIENCE -->
     <article class="card">
-      <h3 class="title">Power BI: RFM Dashboard</h3>
-      <p class="tag">Power BI</p><p class="tag">DAX</p>
-      <p>Customer segmentation and channel analysis with clear executive summary.</p>
-      <p><a href="https://github.com/your-username/powerbi-rfm">Repo</a></p>
+      <div class="kicker">Data Science · Forecasting</div>
+      <h3 class="title">IC Value Forecasting (2025)</h3>
+      <div>
+        <span class="tag">Time‑series</span><span class="tag">Fourier</span><span class="tag">Regression</span><span class="tag">Hybrid</span>
+      </div>
+      <p>Forecasts global IC export value for remaining 2025 months using SNaive12 (baseline), Linear Trend with Seasonality, Regression (Fourier), and a Hybrid (Regression + lag residuals). <strong>Hybrid</strong> wins (≈$0.13T RMSE). Strong seasonality: Feb low; Sep–Nov peaks.</p>
+      <p><a href="https://github.com/rfih/Dibimbing---DSDA/tree/e7944923e68a7f86ffdcc906675cbc01d86c4d8e/Final%20Project%20Data%20Science" target="_blank" rel="noopener">Repo / Files</a></p>
     </article>
   </section>
 
-  <section id="about" class="grid" style="margin-top:24px">
+  <h2 id="about" class="section-title">About</h2>
+  <section class="grid">
     <article class="card">
-      <h3 class="title">About</h3>
-      <p>I build data-driven tools for factories and teams. TOEIC 870. Based in Kaohsiung, TW.</p>
+      <h3 class="title">Hi, I’m Rizky 👋</h3>
+      <p>I’m a Product‑minded Data Analyst with hands‑on experience in manufacturing analytics and web apps. Recent work includes a Power BI dashboard for global IC trade and a time‑series forecasting project to support budgeting & S&OP decisions.</p>
+      <p class="muted">Tools I use: Python (pandas, scikit‑learn), Power BI/DAX, SQL, Flask, GitHub, Excel.</p>
+      <div class="row" style="margin-top:8px">
+        <a class="cta" href="mailto:rizkyfebriibrahabibie@gmail.com">Email</a>
+        <a class="cta" href="https://www.linkedin.com/in/rizkyfebriibrahabibie/" target="_blank" rel="noopener">LinkedIn</a>
+        <a class="cta" href="https://github.com/rfih" target="_blank" rel="noopener">GitHub</a>
+      </div>
     </article>
   </section>
 
   <footer>
-    © <span id="y"></span> Your Name — Hosted on GitHub Pages
+    © <span id="y"></span> Rizky Febri Ibra Habibie — Hosted on GitHub Pages
   </footer>
   <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
