--- a/index.html
+++ b/index.html
@@ -4,55 +4,56 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Rizky Febri Ibra Habibie – Portfolio</title>
-  <meta name="description" content="Data Analysis & Data Science projects by Rizky Febri Ibra Habibie (Power BI, Forecasting, EDA)." />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    :root { --bg:#0f172a; --card:#111827; --muted:#94a3b8; --text:#e5e7eb; --accent:#60a5fa; --border:#1f2937; }
-    *{box-sizing:border-box}
-    body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Arial;background:var(--bg);color:var(--text)}
-    header,footer,.wrap{max-width:980px;margin:0 auto;padding:0 20px}
-    header{padding:48px 20px 12px}
-    h1{font-size:40px;line-height:1.1;margin:8px 0 10px}
-    p{margin:0 0 18px}
-    nav{display:flex;gap:14px;flex-wrap:wrap}
-    nav a{color:var(--muted);text-decoration:none}
-    nav a:hover{color:var(--text)}
-    .tag{display:inline-block;font-size:12px;color:#cbd5e1;border:1px solid #334155;border-radius:999px;padding:2px 8px;margin:0 6px 6px 0}
-    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(270px,1fr));padding:10px 20px 30px}
-    .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:18px;transition:transform .18s ease,border .18s ease}
-    .card:hover{transform:translateY(-4px);border-color:var(--accent)}
-    .title{font-weight:700;font-size:18px;margin:0 0 6px}
-    .muted{color:var(--muted)}
-    a{color:var(--accent);text-decoration:none}
-    footer{padding:28px 20px 48px;color:var(--muted);font-size:14px}
-    .section-title{font-weight:800;font-size:22px;margin:26px 20px 8px}
-    .kicker{font-weight:600;letter-spacing:.04em;color:#a5b4fc;font-size:12px;text-transform:uppercase}
-    .row{display:flex;gap:12px;flex-wrap:wrap}
-    .cta{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--border);padding:8px 12px;border-radius:12px}
-    .cta:hover{border-color:var(--accent)}
-    .profile{display:flex;gap:16px;align-items:center;margin:8px 20px 0}
-    .avatar{width:72px;height:72px;border-radius:999px;border:1px solid var(--border);object-fit:cover}
-  </style>
+    :root{--bg:#0b0f1a;--text:#f1f5f9;--muted:#9ca3af;--link:#7aa2ff;--line:#1f2937;--card:#111827}
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{font-family:Inter,ui-sans-serif,system-ui,Segoe UI,Roboto;background:var(--bg);color:var(--text)}
+    header{padding:28px 20px;display:flex;justify-content:center;position:relative}
+    .menu{display:flex;gap:28px;padding:10px 22px;border:1px solid var(--line);border-radius:12px;background:rgba(17,24,39,0.7);backdrop-filter:blur(8px)}
+    .menu a{color:var(--text);text-decoration:none;font-size:18px;display:flex;align-items:center;gap:6px}
+    .menu a:hover{color:var(--link)}
+    .hero{display:flex;align-items:center;justify-content:space-between;max-width:1100px;margin:60px auto;padding:0 20px;flex-wrap:wrap}
+    .intro{max-width:560px}
+    .intro h1{font-size:48px;font-weight:800;margin:10px 0}
+    .intro p{margin:10px 0;font-size:18px;color:var(--muted)}
+    .cta{margin-top:22px;display:inline-block;border:1px solid #16a34a;padding:12px 24px;border-radius:999px;color:#16a34a;text-decoration:none;font-weight:600}
+    .cta:hover{background:#16a34a;color:#fff}
+    .avatar{width:240px;height:240px;border-radius:18px;object-fit:cover;border:1px solid var(--line)}
+    .icons{margin-top:16px;display:flex;gap:20px;justify-content:center}
+    .icons a{color:var(--text);font-size:22px;text-decoration:none}
+    .icons a:hover{color:var(--link)}
+  .wrap>nav{display:none}
+</style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <header>
-    <nav>
-      <a href="#projects">Projects</a>
-      <a href="#resume">Résumé</a>
-      <a href="#about">About</a>
-      <a href="mailto:rizkyfebriibrahabibie@gmail.com">Contact</a>
-      <a href="https://github.com/rfih" target="_blank" rel="noopener">GitHub</a>
-      <a href="https://www.linkedin.com/in/rizkyfebriibrahabibie/" target="_blank" rel="noopener">LinkedIn</a>
+    <nav class="menu">
+      <a href="#home"><i class="fa-solid fa-house"></i></a>
+      <a href="#about"><i class="fa-solid fa-user"></i></a>
+      <a href="#projects"><i class="fa-solid fa-briefcase"></i></a>
+      <a href="#resume"><i class="fa-solid fa-file-lines"></i></a>
+      <a href="mailto:rizkyfebriibrahabibie@gmail.com"><i class="fa-solid fa-envelope"></i></a>
     </nav>
-    <h1>Rizky Febri Ibra Habibie</h1>
-    <p class="muted">Data Analyst • Product‑minded • Manufacturing & Forecasting — I build practical, business‑ready analytics and time‑series tools. TOEIC 870. Based in Taiwan.</p>
-    <div class="row">
-      <a class="cta" href="https://rfih.github.io/Portfolio/" target="_blank" rel="noopener">Live Portfolio</a>
-      <a class="cta" href="#projects">Jump to Projects</a>
-      <a class="cta" href="#resume">Résumé</a>
-    </div>
   </header>
+
+  <section class="hero" id="home">
+    <div class="intro">
+      <p>👋 Hello, I'm</p>
+      <h1>Rizky Febri Ibra Habibie</h1>
+      <p><em>(pronounced like “REEZ-kee HAB-ee-bee”)</em></p>
+      <p><strong>Data Analyst</strong> specialized in dashboards & forecasting with experience in manufacturing systems and applied analytics.</p>
+      <a href="#about" class="cta">Let's connect</a>
+    </div>
+    <div class="photo">
+      <img class="avatar" src="https://github.com/rfih.png?size=400" alt="Rizky's avatar"/>
+      <div class="icons">
+        <a href="mailto:rizkyfebriibrahabibie@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/rizkyfebriibrahabibie/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/rfih" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </div>
+    </div>
+  </section>
 
   <h2 id="projects" class="section-title">Featured Projects</h2>
   <section class="grid">
@@ -93,7 +94,7 @@
   <h2 id="about" class="section-title">About</h2>
   <div class="profile">
     <img class="avatar" src="https://github.com/rfih.png?size=240" alt="Rizky's GitHub avatar" />
-    <div class="muted">Photo is pulled from GitHub profile avatar. Update your GitHub picture to change it here.</div>
+    <div class="muted"></div>
   </div>
   <section class="grid">
     <article class="card">
