--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="intro">
       <p>👋 Hello, I'm</p>
       <h1>Rizky Febri Ibra Habibie</h1>
-      <p><em>(pronounced like “REEZ-kee HAB-ee-bee”)</em></p>
+      <p><em>Chinese name: 郝俊傑</em></p>
       <p><strong>Data Analyst</strong> specialized in dashboards & forecasting with experience in manufacturing systems and applied analytics.</p>
       <a href="#about" class="cta">Let's connect</a>
     </div>
@@ -55,18 +55,68 @@
     </div>
   </section>
 
-  <h2 id="projects" class="section-title">Featured Projects</h2>
-  <section class="grid">
-    <!-- DATA ANALYSIS 1 -->
-    <article class="card">
-      <div class="kicker">Data Analysis · Power BI</div>
-      <h3 class="title">Global IC Trade Dashboard</h3>
-      <div>
-        <span class="tag">Power BI</span><span class="tag">UN Comtrade</span><span class="tag">EDA</span>
+    <!-- About Me -->
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p class="lead">I collaborate across product, operations, and engineering to turn messy data into decision‑ready dashboards and forecasts. Coming from manufacturing, I focus on pragmatic wins: faster reporting, better capacity planning, and fewer surprises. I care about clear communication, maintainable pipelines, and shipping with polish.</p>
+  </section>
+
+  <div class="trusted">Trusted by teams in Taiwan & Indonesia</div>
+
+  <!-- Experience & Education -->
+  <section id="resume" class="grid-2">
+    <div class="card">
+      <h2>Experience</h2>
+      <div class="timeline">
+        <div class="item">
+          <div class="dates">Aug 2025 – Present</div>
+          <div class="where">明鴻木器股份有限公司 — Production Section Leader</div>
+          <div class="role">Lead daily production; coordinate planning & maintenance; drive MES & SOP improvements; deliver on-time with quality.</div>
+        </div>
+        <div class="item">
+          <div class="dates">Mar 2025 – Aug 2025</div>
+          <div class="where">Equipment Engineer</div>
+          <div class="role">Preventive maintenance playbooks, equipment database & spare‑parts, process documentation.</div>
+        </div>
+        <div class="item">
+          <div class="dates">Dec 2024 – Mar 2025</div>
+          <div class="where">Warehouse Trainee</div>
+          <div class="role">Inventory operations; proposed FlexSim‑based layout options (narrow‑aisle, mezzanine).</div>
+        </div>
+        <div class="item">
+          <div class="dates">Jun 2024 – Mar 2025</div>
+          <div class="where">Management Trainee</div>
+          <div class="role">Built door‑frame calculator app; created maintenance SOPs; improved station standards.</div>
+        </div>
       </div>
-      <p>Interactive dashboard analyzing worldwide Integrated Circuits (IC) export patterns (2020–2024): top countries, volumes vs. value, and exporter/importer distribution. 2022 peaks ~USD 2.15T; exporters &gt;45% of countries, showing supply concentration.</p>
-      <p><a href="https://github.com/rfih/Dibimbing---DSDA/tree/e7944923e68a7f86ffdcc906675cbc01d86c4d8e/Final%20Project%20Data%20Analysis" target="_blank" rel="noopener">Repo / Files</a></p>
-    </article>
+    </div>
+    <div class="card">
+      <h2>Education</h2>
+      <div class="timeline">
+        <div class="item">
+          <div class="dates">2025 – Present</div>
+          <div class="where">Dibimbing.id — Data Science & Data Analyst</div>
+          <div class="role">Projects: Global IC Trade (Power BI) & IC Value Forecasting (Python).</div>
+        </div>
+        <div class="item">
+          <div class="dates">—</div>
+          <div class="where">NTUST — M.Sc. Industrial Management</div>
+          <div class="role">GPA 3.78/4.30</div>
+        </div>
+        <div class="item">
+          <div class="dates">2023 – 2024</div>
+          <div class="where">NTNU — Mandarin Training</div>
+          <div class="role">TOCFL A2</div>
+        </div>
+        <div class="item">
+          <div class="dates">—</div>
+          <div class="where">UII — B.Eng. Chemical Engineering</div>
+          <div class="role">GPA 3.35/4.00</div>
+        </div>
+      </div>
+      <a class="btn" href="./Rizky_CV.pdf" target="_blank" rel="noopener">Download full résumé (PDF)</a>
+    </div>
+  </section>
 
     <!-- DATA ANALYSIS 2 -->
     <article class="card">
