--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
 .btn{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--text);color:var(--text);padding:10px 14px;border-radius:999px;text-decoration:none;margin-top:10px}
 .btn:hover{background:rgba(255,255,255,.06)}
 @media(max-width:880px){.grid-2{grid-template-columns:1fr}}
+.services{max-width:1100px;margin:40px auto;padding:0 20px}
+.services h2{font-size:28px;margin-bottom:14px}
+.cards{display:grid;grid-template-columns:1fr 1fr;gap:18px}
+.service-card{background:rgba(17,20,28,.6);border:1px solid var(--line);border-radius:16px;padding:18px}
+.service-card .head{display:flex;align-items:center;gap:12px;margin-bottom:8px}
+.service-card svg{width:22px;height:22px;opacity:.9}
+.service-card h3{margin:0;font-size:18px}
+.service-card p{color:var(--muted);margin:6px 0 8px}
+.service-card a{font-size:14px}
+@media(max-width:820px){.cards{grid-template-columns:1fr}}
+.skills{max-width:1100px;margin:22px auto 8px;padding:0 20px;display:flex;flex-wrap:wrap;gap:14px;justify-content:center}
+.skill-ico{width:28px;height:28px;border:1px solid var(--line);border-radius:10px;display:grid;place-items:center;opacity:.85}
+.skill-ico svg{width:16px;height:16px}
+.cta-section{max-width:1100px;margin:46px auto 60px;padding:0 20px;text-align:center}
+.cta-section h2{font-size:44px;margin:4px 0 10px}
+.cta-section .muted{max-width:640px;margin:0 auto 16px}
+.cta-buttons{display:flex;gap:14px;justify-content:center;flex-wrap:wrap}
+.btn-primary{border:1px solid #22c55e;background:transparent;color:#eafff1;padding:10px 16px;border-radius:999px;text-decoration:none}
+.btn-primary:hover{background:rgba(34,197,94,.12)}
+.btn-outline{border:1px solid var(--text);color:var(--text);padding:10px 16px;border-radius:999px;text-decoration:none}
+.btn-outline:hover{background:rgba(255,255,255,.06)}
 </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -55,7 +76,7 @@
     <div class="intro">
       <p>👋 Hello, I'm</p>
       <h1>Rizky Febri Ibra Habibie</h1>
-      <p><em>Chinese name: 郝俊傑</em></p>
+      <p><em>(pronounced like “REEZ-kee HAB-ee-bee”)</em></p>
       <p><strong>Data Analyst</strong> specialized in dashboards & forecasting with experience in manufacturing systems and applied analytics.</p>
       <a href="#about" class="cta">Let's connect</a>
     </div>
@@ -129,6 +150,73 @@
         </div>
       </div>
       <a class="btn" href="./Rizky_CV.pdf" target="_blank" rel="noopener">Download full résumé (PDF)</a>
+    </div>
+  </section>
+
+  
+  <!-- What I'm doing / Projects grid -->
+  <section class="services" id="services">
+    <h2>What I'm doing</h2>
+    <div class="cards">
+      <!-- Project 1: Real -->
+      <article class="service-card">
+        <div class="head">
+          <span class="skill-ico" title="Power BI"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="3" y="7" width="3" height="10" rx="1.2"/><rect x="8" y="5" width="3" height="12" rx="1.2"/><rect x="13" y="9" width="3" height="8" rx="1.2"/><path d="M18 9v6c0 1.1.9 2 2 2h1"/></svg></span>
+          <h3>Global IC Trade Dashboard</h3>
+        </div>
+        <p>Power BI dashboard analyzing worldwide IC exports (2020–2024): value, volume, top countries, and importer/exporter split. Peak in 2022 (~$2.15T).</p>
+        <a href="https://github.com/rfih/Dibimbing---DSDA/tree/e7944923e68a7f86ffdcc906675cbc01d86c4d8e/Final%20Project%20Data%20Analysis" target="_blank" rel="noopener">View repo</a>
+      </article>
+      <!-- Project 2: Real -->
+      <article class="service-card">
+        <div class="head">
+          <span class="skill-ico" title="Time-series"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M4 19V5"/><path d="M20 19H4"/><path d="M7 14l3-3 3 3 4-5"/></svg></span>
+          <h3>IC Value Forecasting (2025)</h3>
+        </div>
+        <p>Hybrid regression + Fourier + lag residuals. Best RMSE ≈ $0.13T. Forecasts next 6 months ≈ $1.73–1.79T, with Sep–Nov peaks.</p>
+        <a href="https://github.com/rfih/Dibimbing---DSDA/tree/e7944923e68a7f86ffdcc906675cbc01d86c4d8e/Final%20Project%20Data%20Science" target="_blank" rel="noopener">View repo</a>
+      </article>
+      <!-- Project 3: Placeholder -->
+      <article class="service-card">
+        <div class="head">
+          <span class="skill-ico" title="Placeholder"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="4" y="4" width="16" height="12" rx="2"/><path d="M8 20h8"/></svg></span>
+          <h3>Project Placeholder A</h3>
+        </div>
+        <p>Short one‑liner about the project. Replace this with your own description and link.</p>
+        <a href="#">Add link</a>
+      </article>
+      <!-- Project 4: Placeholder -->
+      <article class="service-card">
+        <div class="head">
+          <span class="skill-ico" title="Placeholder"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M3 7h18"/><path d="M3 12h18"/><path d="M3 17h18"/></svg></span>
+          <h3>Project Placeholder B</h3>
+        </div>
+        <p>Short one‑liner about the project. Replace this with your own description and link.</p>
+        <a href="#">Add link</a>
+      </article>
+    </div>
+  </section>
+
+  <!-- Skills icons row -->
+  <div class="skills" aria-label="Skills">
+    <span class="skill-ico" title="Python"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M8 4h6a3 3 0 0 1 3 3v3H7a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3z"/><path d="M16 20H10a3 3 0 0 1-3-3v-3h10a3 3 0 0 1 3 3v0a3 3 0 0 1-3 3z"/><circle cx="9" cy="7" r="1"/></svg></span>
+    <span class="skill-ico" title="Pandas"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 4v16"/><path d="M12 2v20"/><path d="M18 4v16"/></svg></span>
+    <span class="skill-ico" title="NumPy"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M4 16l6-8 6 8"/><path d="M10 16V8"/><path d="M16 16V8"/></svg></span>
+    <span class="skill-ico" title="scikit‑learn / ML"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><circle cx="12" cy="12" r="3"/><path d="M12 3v6"/><path d="M21 12h-6"/><path d="M12 21v-6"/><path d="M3 12h6"/></svg></span>
+    <span class="skill-ico" title="SQL"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><ellipse cx="12" cy="5" rx="7" ry="3"/><path d="M5 5v7a7 3 0 0 0 14 0V5"/></svg></span>
+    <span class="skill-ico" title="Power BI"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="3" y="7" width="3" height="10" rx="1.2"/><rect x="8" y="5" width="3" height="12" rx="1.2"/><rect x="13" y="9" width="3" height="8" rx="1.2"/></svg></span>
+    <span class="skill-ico" title="Excel"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="3" y="4" width="18" height="16" rx="2"/><path d="M10 4v16"/><path d="M3 10h18"/><path d="M6 8l3 4-3 4"/><path d="M12 8l-3 4 3 4"/></svg></span>
+    <span class="skill-ico" title="Flask"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 20c6-2 9-6 10-12"/><path d="M5 16c4-1 7-4 8-8"/></svg></span>
+    <span class="skill-ico" title="Git/GitHub"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 3v6a3 3 0 0 0 3 3h6"/><circle cx="18" cy="12" r="2"/><circle cx="6" cy="3" r="2"/><circle cx="9" cy="12" r="2"/></svg></span>
+  </div>
+
+  <!-- CTA / Contact -->
+  <section class="cta-section" id="contact">
+    <h2>Let's Keep in <span style="color:#7ee787">Touch</span></h2>
+    <p class="muted">Whether you want to start a project, ask a question, or just say hi — I’m just a message away.</p>
+    <div class="cta-buttons">
+      <a class="btn-primary" href="mailto:rizkyfebriibrahabibie@gmail.com">Contact me</a>
+      <a class="btn-outline" href="./Rizky_CV.pdf" target="_blank" rel="noopener">Download résumé (CV)</a>
     </div>
   </section>
 
