--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     body{font-family:Inter,ui-sans-serif,system-ui,Segoe UI,Roboto;background:var(--bg);color:var(--text)}
     header{padding:28px 20px;display:flex;justify-content:center;position:relative}
     .menu{display:flex;gap:28px;padding:10px 22px;border:1px solid var(--line);border-radius:12px;background:rgba(17,24,39,0.7);backdrop-filter:blur(8px)}
-    .menu a{color:var(--text);text-decoration:none;font-size:18px;display:flex;align-items:center;gap:6px}
+    .menu a{color:var(--text);text-decoration:none;font-size:18px;display:flex;align-items:center;gap:12px}
     .menu a:hover{color:var(--link)}
-    .hero{display:flex;align-items:center;justify-content:space-between;max-width:1100px;margin:60px auto;padding:0 20px;flex-wrap:wrap}
-    .intro{max-width:560px}
+    .hero{display:flex;align-items:center;justify-content:space-between;max-width:1100px;margin:100px auto;padding:0 20px;flex-wrap:wrap}
+    .intro{max-width:600px}
     .intro h1{font-size:48px;font-weight:800;margin:10px 0}
     .intro p{margin:10px 0;font-size:18px;color:var(--muted)}
     .cta{margin-top:22px;display:inline-block;border:1px solid #16a34a;padding:12px 24px;border-radius:999px;color:#16a34a;text-decoration:none;font-weight:600}
@@ -23,13 +23,14 @@
     .icons a{color:var(--text);font-size:22px;text-decoration:none}
     .icons a:hover{color:var(--link)}
   .wrap>nav{display:none}
-.section{max-width:1100px;margin:40px auto;padding:0 20px}
-.section h2{font-size:28px;margin-bottom:10px}
+.section{max-width:1100px;margin:150px auto;padding:0 20px}
+.section h2{font-size:28px;margin-bottom:15px}
 .lead{color:var(--muted);line-height:1.7;max-width:960px}
-.trusted{max-width:1100px;margin:30px auto 10px;padding:0 20px;text-align:center;font-weight:800;font-size:26px}
+.trusted{max-width:1100px;margin:30px auto 10px;padding:0 20px;text-align:left;font-weight:800;font-size:26px}
 .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:36px;max-width:1100px;margin:0 auto;padding:0 20px}
 .card{background:var(--card);border:1px solid var(--line);border-radius:14px;padding:18px}
-.timeline{border-left:2px solid var(--line);padding-left:14px}
+.company{font-weight:700;font-size:20px;margin-bottom:10px}
+.timeline{border-left:2px solid var(--line);padding-left:14px;margin-top:10px}
 .timeline .item{margin:14px 0}
 .timeline .where{font-weight:700}
 .timeline .role{color:var(--muted)}
@@ -37,7 +38,7 @@
 .btn{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--text);color:var(--text);padding:10px 14px;border-radius:999px;text-decoration:none;margin-top:10px}
 .btn:hover{background:rgba(255,255,255,.06)}
 @media(max-width:880px){.grid-2{grid-template-columns:1fr}}
-.services{max-width:1100px;margin:40px auto;padding:0 20px}
+.services{max-width:1100px;margin:150px auto;padding:0 20px}
 .services h2{font-size:28px;margin-bottom:14px}
 .cards{display:grid;grid-template-columns:1fr 1fr;gap:18px}
 .service-card{background:rgba(17,20,28,.6);border:1px solid var(--line);border-radius:16px;padding:18px}
@@ -49,8 +50,8 @@
 @media(max-width:820px){.cards{grid-template-columns:1fr}}
 .skills{max-width:1100px;margin:22px auto 8px;padding:0 20px;display:flex;flex-wrap:wrap;gap:14px;justify-content:center}
 .skill-ico{width:28px;height:28px;border:1px solid var(--line);border-radius:10px;display:grid;place-items:center;opacity:.85}
-.skill-ico svg{width:16px;height:16px}
-.cta-section{max-width:1100px;margin:46px auto 60px;padding:0 20px;text-align:center}
+.skill-ico svg{width:30px;height:30px}
+.cta-section{max-width:1100px;margin:46px auto 100px;padding:0 20px;text-align:center}
 .cta-section h2{font-size:44px;margin:4px 0 10px}
 .cta-section .muted{max-width:640px;margin:0 auto 16px}
 .cta-buttons{display:flex;gap:14px;justify-content:center;flex-wrap:wrap}
@@ -58,10 +59,78 @@
 .btn-primary:hover{background:rgba(34,197,94,.12)}
 .btn-outline{border:1px solid var(--text);color:var(--text);padding:10px 16px;border-radius:999px;text-decoration:none}
 .btn-outline:hover{background:rgba(255,255,255,.06)}
+/* Safety overrides so icons never disappear */
+.topnav{ z-index:99999; }
+.topnav a{ color:#e6eaf2 !important; }
+.topnav svg{ stroke: currentColor; }
+/* Safe hero glow that never covers the nav */
+.hero-glow{ position:relative; z-index:0; }
+.hero-glow::after{ content:""; position:absolute; inset:-60px -80px; background: radial-gradient(600px 400px at 85% 35%, rgba(120,119,198,.25), transparent 60%); filter: blur(30px); z-index:-1; pointer-events:none; }
+@keyframes bgshift{0%{transform:translate3d(0,0,0)}50%{transform:translate3d(10%,-10%,0)}100%{transform:translate3d(0,0,0)}}
+.bg-animated{position:fixed;inset:-10% -10%;z-index:-2;filter:blur(40px) saturate(120%);background:
+  radial-gradient(40% 35% at 70% 30%, rgba(124,58,237,.25), transparent 60%),
+  radial-gradient(45% 40% at 25% 75%, rgba(34,197,94,.18), transparent 60%);
+animation:bgshift 18s ease-in-out infinite;pointer-events:none}
+@media (prefers-reduced-motion: reduce){.bg-animated{animation:none}}
+/* --- animation visibility + strength overrides --- */
+@keyframes bgshift2{0%{transform:translate3d(0,0,0)}50%{transform:translate3d(4%,-4%,0)}100%{transform:translate3d(0,0,0)}}
+.bg-animated{z-index:-1 !important; will-change:transform; animation:bgshift2 14s ease-in-out infinite !important;}
+body::before{z-index:-3 !important; opacity:.35 !important}
+body::after{z-index:-2 !important}
+/* test override even if reduced motion is on */
+body.force-anim .bg-animated{animation:bgshift2 10s ease-in-out infinite !important}
+/* Staggered pops using pseudo-elements */
+.bg-animated.fireworks {
+  animation: none; /* turn off the drift if you want only pops */
+  opacity: .85;
+}
+.bg-animated.fireworks::before,
+.bg-animated.fireworks::after{
+  content:"";
+  position:absolute; inset:-10% -10%;
+  background:
+    radial-gradient(14rem 14rem at 72% 32%, rgba(124,58,237,.45), transparent 60%),
+    radial-gradient(11rem 11rem at 28% 74%, rgba(34,197,94,.45), transparent 60%),
+    radial-gradient(9rem 9rem at 50% 55%, rgba(56,189,248,.35), transparent 60%);
+  filter: blur(28px) saturate(120%);
+  animation: pop 2.4s ease-in-out infinite;
+  pointer-events:none;
+  z-index: -1;
+}
+.bg-animated.fireworks::after{
+  animation-delay: 1.2s;              /* stagger the second burst */
+  background:
+    radial-gradient(12rem 12rem at 65% 38%, rgba(168,85,247,.45), transparent 60%),
+    radial-gradient(10rem 10rem at 22% 70%, rgba(34,197,94,.40), transparent 60%),
+    radial-gradient(8rem 8rem  at 52% 52%, rgba(99,102,241,.35), transparent 60%);
+  filter: blur(24px) saturate(130%);
+}
+
+@keyframes pop{
+  0%   { transform: scale(.6); opacity: 0; }
+  15%  { opacity: 1; }
+  60%  { opacity: .9; }
+  100% { transform: scale(1.7); opacity: 0; }
+}
+@keyframes breatheOpacity {
+  0%   { opacity:.35; transform: translate3d(0,0,0) scale(0.98); }
+  50%  { opacity:.75; transform: translate3d(4%,-4%,0) scale(1.04); }
+  100% { opacity:.35; transform: translate3d(0,0,0) scale(0.98); }
+}
+/* keep the travel you like + add breathing */
+.bg-animated.breathe{
+  animation:
+    bgshift2 16s ease-in-out infinite,
+    breatheOpacity 6s ease-in-out infinite;
+}
+
 </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+  <div class="bg-animated" aria-hidden="true"></div>
+  <div class="bg-animated fireworks" aria-hidden="true"></div>
+  <div class="bg-animated breathe" aria-hidden="true"></div>
   <header>
     <nav class="menu">
       <a href="#home"><i class="fa-solid fa-house"></i></a>
@@ -76,7 +145,7 @@
     <div class="intro">
       <p>👋 Hello, I'm</p>
       <h1>Rizky Febri Ibra Habibie</h1>
-      <p><em>(pronounced like “REEZ-kee HAB-ee-bee”)</em></p>
+      <p><em>Chinese name: 郝俊傑</em></p>
       <p><strong>Data Analyst</strong> specialized in dashboards & forecasting with experience in manufacturing systems and applied analytics.</p>
       <a href="#about" class="cta">Let's connect</a>
     </div>
@@ -96,16 +165,17 @@
     <p class="lead">I collaborate across product, operations, and engineering to turn messy data into decision‑ready dashboards and forecasts. Coming from manufacturing, I focus on pragmatic wins: faster reporting, better capacity planning, and fewer surprises. I care about clear communication, maintainable pipelines, and shipping with polish.</p>
   </section>
 
-  <div class="trusted">Trusted by teams in Taiwan & Indonesia</div>
+  <div class="trusted">Multinational experience</div>
 
   <!-- Experience & Education -->
   <section id="resume" class="grid-2">
     <div class="card">
       <h2>Experience</h2>
+      <div class="company">明鴻木器股份有限公司</div>
       <div class="timeline">
         <div class="item">
           <div class="dates">Aug 2025 – Present</div>
-          <div class="where">明鴻木器股份有限公司 — Production Section Leader</div>
+          <div class="where">Production Section Leader</div>
           <div class="role">Lead daily production; coordinate planning & maintenance; drive MES & SOP improvements; deliver on-time with quality.</div>
         </div>
         <div class="item">
@@ -129,13 +199,13 @@
       <h2>Education</h2>
       <div class="timeline">
         <div class="item">
-          <div class="dates">2025 – Present</div>
+          <div class="dates">2025</div>
           <div class="where">Dibimbing.id — Data Science & Data Analyst</div>
-          <div class="role">Projects: Global IC Trade (Power BI) & IC Value Forecasting (Python).</div>
+          <div class="role">Projects: Global IC Trade (Data Analysis) & IC Value Forecasting (Python).</div>
         </div>
         <div class="item">
-          <div class="dates">—</div>
-          <div class="where">NTUST — M.Sc. Industrial Management</div>
+          <div class="dates">2021 - 2023</div>
+          <div class="where">NTUST — M.B.A. Industrial Management</div>
           <div class="role">GPA 3.78/4.30</div>
         </div>
         <div class="item">
@@ -144,14 +214,17 @@
           <div class="role">TOCFL A2</div>
         </div>
         <div class="item">
-          <div class="dates">—</div>
-          <div class="where">UII — B.Eng. Chemical Engineering</div>
+          <div class="dates">2016 - 2020</div>
+          <div class="where">Islamic University of Indonesia — B.Eng. Chemical Engineering</div>
           <div class="role">GPA 3.35/4.00</div>
         </div>
       </div>
-      <a class="btn" href="./Rizky_CV.pdf" target="_blank" rel="noopener">Download full résumé (PDF)</a>
     </div>
   </section>
+
+  <div class="cta-buttons">
+    <a class="btn" href="./Rizky_CV.pdf" target="_blank" rel="noopener">Download full resume (CV)</a>
+  </div>
 
   
   <!-- What I'm doing / Projects grid -->
@@ -195,20 +268,21 @@
         <a href="#">Add link</a>
       </article>
     </div>
+    <div class="skills" aria-label="Skills">
+      <span class="skill-ico" title="Python"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M8 4h6a3 3 0 0 1 3 3v3H7a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3z"/><path d="M16 20H10a3 3 0 0 1-3-3v-3h10a3 3 0 0 1 3 3v0a3 3 0 0 1-3 3z"/><circle cx="9" cy="7" r="1"/></svg></span>
+      <span class="skill-ico" title="Pandas"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 4v16"/><path d="M12 2v20"/><path d="M18 4v16"/></svg></span>
+      <span class="skill-ico" title="NumPy"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M4 16l6-8 6 8"/><path d="M10 16V8"/><path d="M16 16V8"/></svg></span>
+      <span class="skill-ico" title="scikit‑learn / ML"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><circle cx="12" cy="12" r="3"/><path d="M12 3v6"/><path d="M21 12h-6"/><path d="M12 21v-6"/><path d="M3 12h6"/></svg></span>
+      <span class="skill-ico" title="SQL"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><ellipse cx="12" cy="5" rx="7" ry="3"/><path d="M5 5v7a7 3 0 0 0 14 0V5"/></svg></span>
+      <span class="skill-ico" title="Power BI"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="3" y="7" width="3" height="10" rx="1.2"/><rect x="8" y="5" width="3" height="12" rx="1.2"/><rect x="13" y="9" width="3" height="8" rx="1.2"/></svg></span>
+      <span class="skill-ico" title="Excel"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="3" y="4" width="18" height="16" rx="2"/><path d="M10 4v16"/><path d="M3 10h18"/><path d="M6 8l3 4-3 4"/><path d="M12 8l-3 4 3 4"/></svg></span>
+      <span class="skill-ico" title="Flask"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 20c6-2 9-6 10-12"/><path d="M5 16c4-1 7-4 8-8"/></svg></span>
+      <span class="skill-ico" title="Git/GitHub"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 3v6a3 3 0 0 0 3 3h6"/><circle cx="18" cy="12" r="2"/><circle cx="6" cy="3" r="2"/><circle cx="9" cy="12" r="2"/></svg></span>
+    </div>
   </section>
 
   <!-- Skills icons row -->
-  <div class="skills" aria-label="Skills">
-    <span class="skill-ico" title="Python"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M8 4h6a3 3 0 0 1 3 3v3H7a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3z"/><path d="M16 20H10a3 3 0 0 1-3-3v-3h10a3 3 0 0 1 3 3v0a3 3 0 0 1-3 3z"/><circle cx="9" cy="7" r="1"/></svg></span>
-    <span class="skill-ico" title="Pandas"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 4v16"/><path d="M12 2v20"/><path d="M18 4v16"/></svg></span>
-    <span class="skill-ico" title="NumPy"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M4 16l6-8 6 8"/><path d="M10 16V8"/><path d="M16 16V8"/></svg></span>
-    <span class="skill-ico" title="scikit‑learn / ML"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><circle cx="12" cy="12" r="3"/><path d="M12 3v6"/><path d="M21 12h-6"/><path d="M12 21v-6"/><path d="M3 12h6"/></svg></span>
-    <span class="skill-ico" title="SQL"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><ellipse cx="12" cy="5" rx="7" ry="3"/><path d="M5 5v7a7 3 0 0 0 14 0V5"/></svg></span>
-    <span class="skill-ico" title="Power BI"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="3" y="7" width="3" height="10" rx="1.2"/><rect x="8" y="5" width="3" height="12" rx="1.2"/><rect x="13" y="9" width="3" height="8" rx="1.2"/></svg></span>
-    <span class="skill-ico" title="Excel"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="3" y="4" width="18" height="16" rx="2"/><path d="M10 4v16"/><path d="M3 10h18"/><path d="M6 8l3 4-3 4"/><path d="M12 8l-3 4 3 4"/></svg></span>
-    <span class="skill-ico" title="Flask"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 20c6-2 9-6 10-12"/><path d="M5 16c4-1 7-4 8-8"/></svg></span>
-    <span class="skill-ico" title="Git/GitHub"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M6 3v6a3 3 0 0 0 3 3h6"/><circle cx="18" cy="12" r="2"/><circle cx="6" cy="3" r="2"/><circle cx="9" cy="12" r="2"/></svg></span>
-  </div>
+
 
   <!-- CTA / Contact -->
   <section class="cta-section" id="contact">
@@ -216,7 +290,7 @@
     <p class="muted">Whether you want to start a project, ask a question, or just say hi — I’m just a message away.</p>
     <div class="cta-buttons">
       <a class="btn-primary" href="mailto:rizkyfebriibrahabibie@gmail.com">Contact me</a>
-      <a class="btn-outline" href="./Rizky_CV.pdf" target="_blank" rel="noopener">Download résumé (CV)</a>
+      <a class="btn-outline" href="./Rizky_CV.pdf" target="_blank" rel="noopener">Download full resume (CV)</a>
     </div>
   </section>
 
