--- a/index.html
+++ b/index.html
@@ -253,19 +253,19 @@ body.force-anim .bg-animated{animation:bgshift2 10s ease-in-out infinite !import
       <article class="service-card">
         <div class="head">
           <span class="skill-ico" title="Placeholder"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><rect x="4" y="4" width="16" height="12" rx="2"/><path d="M8 20h8"/></svg></span>
-          <h3>Project Placeholder A</h3>
+          <h3>MES website based 明鴻木器股份有限公司</h3>
         </div>
-        <p>Short one‑liner about the project. Replace this with your own description and link.</p>
-        <a href="#">Add link</a>
+        <p>A simple MES system focus on production of fireproof door in 明鴻木器股份有限公 to match a reality complex production process. Also covers analysis of processing time.</p>
+        <a href="https://github.com/rfih/ERP-website-meanhome">View repo</a>
       </article>
       <!-- Project 4: Placeholder -->
       <article class="service-card">
         <div class="head">
           <span class="skill-ico" title="Placeholder"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7"><path d="M3 7h18"/><path d="M3 12h18"/><path d="M3 17h18"/></svg></span>
-          <h3>Project Placeholder B</h3>
+          <h3>Doorframe calculator</h3>
         </div>
-        <p>Short one‑liner about the project. Replace this with your own description and link.</p>
-        <a href="#">Add link</a>
+        <p>A simple flask application for operators in 明鴻木器股份有限公 to easily calculate the doorframe based on the demand. Further decrease operational time and error.</p>
+        <a href="https://github.com/rfih/Doorframe">View repo</a>
       </article>
     </div>
     <div class="skills" aria-label="Skills">
