--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ body.force-anim .bg-animated{animation:bgshift2 10s ease-in-out infinite !import
           <h3>Global IC Trade Dashboard</h3>
         </div>
         <p>Power BI dashboard analyzing worldwide IC exports (2020–2024): value, volume, top countries, and importer/exporter split. Peak in 2022 (~$2.15T).</p>
-        <a href="https://github.com/rfih/Dibimbing---DSDA/tree/e7944923e68a7f86ffdcc906675cbc01d86c4d8e/Final%20Project%20Data%20Analysis" target="_blank" rel="noopener">View repo</a>
+        <a href="https://github.com/rfih/Global-Integrated-Circuit-Trade-Data-Analysis" target="_blank" rel="noopener">View repo</a>
       </article>
       <!-- Project 2: Real -->
       <article class="service-card">
@@ -247,7 +247,7 @@ body.force-anim .bg-animated{animation:bgshift2 10s ease-in-out infinite !import
           <h3>IC Value Forecasting (2025)</h3>
         </div>
         <p>Hybrid regression + Fourier + lag residuals. Best RMSE ≈ $0.13T. Forecasts next 6 months ≈ $1.73–1.79T, with Sep–Nov peaks.</p>
-        <a href="https://github.com/rfih/Dibimbing---DSDA/tree/e7944923e68a7f86ffdcc906675cbc01d86c4d8e/Final%20Project%20Data%20Science" target="_blank" rel="noopener">View repo</a>
+        <a href="https://github.com/rfih/Global-Integrated-Circuit-Value-Forecasting" target="_blank" rel="noopener">View repo</a>
       </article>
       <!-- Project 3: Placeholder -->
       <article class="service-card">
