--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ body.force-anim .bg-animated{animation:bgshift2 10s ease-in-out infinite !import
     <p class="muted">Whether you want to start a project, ask a question, or just say hi — I’m just a message away.</p>
     <div class="cta-buttons">
       <a class="btn-primary" href="mailto:rizkyfebriibrahabibie@gmail.com">Contact me</a>
-      <a class="btn-outline" href="./Rizky_CV.pdf" target="_blank" rel="noopener">Download full resume (CV)</a>
+      <a class="btn-outline" href="./CV_Rizky_Habibie.pdf" target="_blank" rel="noopener">Download full resume (CV)</a>
     </div>
   </section>
 
