--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     .hero{display:flex;align-items:center;justify-content:space-between;max-width:1100px;margin:100px auto;padding:0 20px;flex-wrap:wrap}
     .intro{max-width:600px}
     .intro h1{font-size:48px;font-weight:800;margin:10px 0}
-    .intro p{margin:10px 0;font-size:18px;color:var(--muted)}
+    .intro p{margin:10px 0;font-size:20px;color:var(--muted)}
     .cta{margin-top:22px;display:inline-block;border:1px solid #16a34a;padding:12px 24px;border-radius:999px;color:#16a34a;text-decoration:none;font-weight:600}
     .cta:hover{background:#16a34a;color:#fff}
-    .avatar{width:240px;height:240px;border-radius:18px;object-fit:cover;border:1px solid var(--line)}
+    .avatar{width:300px;height: 300px;;border-radius:18px;object-fit:cover;border:1px solid var(--line)}
     .icons{margin-top:16px;display:flex;gap:20px;justify-content:center}
     .icons a{color:var(--text);font-size:22px;text-decoration:none}
     .icons a:hover{color:var(--link)}
@@ -146,7 +146,7 @@ body.force-anim .bg-animated{animation:bgshift2 10s ease-in-out infinite !import
       <p>👋 Hello, I'm</p>
       <h1>Rizky Febri Ibra Habibie</h1>
       <p><em>Chinese name: 郝俊傑</em></p>
-      <p><strong>Data Analyst</strong> specialized in dashboards & forecasting with experience in manufacturing systems and applied analytics.</p>
+      <p>I help teams make informed decisions by transforming raw data into dashboards, analyses, and forecasts. I value clear communication, simple architectures, and solutions that are easy to maintain and actually used.</p>
       <a href="#about" class="cta">Let's connect</a>
     </div>
     <div class="photo">
@@ -162,7 +162,9 @@ body.force-anim .bg-animated{animation:bgshift2 10s ease-in-out infinite !import
   <!-- About Me -->
   <section id="about" class="section">
     <h2>About Me</h2>
-    <p class="lead">I collaborate across product, operations, and engineering to turn messy data into decision‑ready dashboards and forecasts. Coming from manufacturing, I focus on pragmatic wins: faster reporting, better capacity planning, and fewer surprises. I care about clear communication, maintainable pipelines, and shipping with polish.</p>
+    <p class="lead">I’m a product‑minded data analyst with a manufacturing background. I’ve led shop‑floor operations and equipment programs, then translated those needs into practical analytics—dashboards that speed up daily decisions, time‑series forecasts for S&OP, and lightweight apps that reduce manual work. I care about clear communication, simple architectures, and solutions teams will actually use.</p>
+    <p class="lead">Recently, I served as <strong>Production Section Leader</strong> at 明鴻木器股份有限公司 after roles in equipment and warehouse operations. I’ve built maintenance SOPs, an internal door‑frame calculator app, and helped improve MES practices so stations hit output and quality targets. On the analytics side, I focus on IC trade insights (Power BI) and forecasting (Python) to turn raw data into decision‑ready narratives.</p>
+    <p class="lead">I hold an <strong>M.Sc. in Industrial Management</strong> (NTUST), and I’m completing the <strong>Data Science & Data Analysis</strong> program at Dibimbing.id. I work primarily with <strong>Python</strong> (pandas, scikit‑learn), <strong>Power BI/DAX</strong>, <strong>SQL</strong>, and <strong>Excel</strong>, with a bit of <strong>Flask</strong> for internal tools. Languages: Bahasa (native), English (TOEIC 870), and Chinese Traditional (TOCFL A2). Based in Taiwan.</p>
   </section>
 
   <div class="trusted">Multinational experience</div>
